<resources>
    <string name="app_name">smartScale</string>
    <string name="measurement">Measurement</string>
    <string name="trends">Trends</string>
    <string name="myAccount">MyAccount</string>
    <string name="startMeasurement">Start</string>

    <string name="BMI">BMI</string>
    <string name="weight">weight</string>

    <string name="title">Please Enter the following information</string>
    <string name="height">Height(m):</string>
    <string name="age">Age:</string>
    <string name="enter">Enter</string>

    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
<!--        <item>Last 7 days</item>-->



    </string-array>







</resources>
