<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id ="@+id/screenLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="horizontal"
    tools:context=".measurements" >

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2">

        <Button
            android:id="@+id/measurements"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/measurement">

        </Button>

        <Button
            android:id="@+id/trends"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/trends"
            >

        </Button>

<!--        <Button-->
<!--            android:id="@+id/myAccount"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="match_parent"-->
<!--            android:layout_weight="1"-->
<!--            android:text="@string/myAccount">-->

<!--        </Button>-->







    </LinearLayout>

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/startMeasurement" />

    <TextView
        android:id="@+id/BMI"
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="false"

        android:layout_marginTop="400dp"
        android:layout_marginRight="250dp"

        android:layout_marginBottom="400dp" />

    <TextView
        android:id="@+id/weight"
        android:layout_width="149dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="false"

        android:layout_marginTop="400dp"
        android:layout_marginLeft="250dp"

        android:layout_marginBottom="400dp" />


</RelativeLayout>